5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1601_2425.log
== TEST (2019-03-23 16:53:21) 
-- CODE:
a = input()
print(a,"km/1")
-- OUTPUT:
28.572 km/1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:27:55) 
-- CODE:
a = input()
print(round(a"km/1",3)
-- ERROR:
File "XXXX", line 2
    print(round(a"km/1",3)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:28:47) 
-- CODE:
a = input()
print(round(a,3)
-- ERROR:
File "XXXX", line 3
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:29:08) 
-- CODE:
a = input()
print(round(a,3))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(a,3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:46:07) 
-- CODE:
a = input()
b = a"km/l"
print(round(b,3))
-- ERROR:
File "XXXX", line 2
    b = a"km/l"
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:46:19) 
-- CODE:
a = input()
b = a ,"km/l"
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(b,3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:26) 
-- CODE:
a = input()
print(round(a,3),kml)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(a,3),kml)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:46) 
-- CODE:
a = input()
print(round(a,3),"kml")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(a,3),"kml")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:57:30) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,km/l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(B,km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:57:41) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,"km/l")



-- EXECUTION TIME:
0.172237
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:00:11) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,"km/l")



-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:39:31) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,"km/l")



-- EXECUTION TIME:
0.19452
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:41:40) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,"km/l")



-- EXECUTION TIME:
0.104841
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:41:45) 
-- CODE:
a = float(input("distancia percorrida"))
b = float(input("combustivel gasto"))
B = round(a/b,3)
print(B,"km/l")



-- EXECUTION TIME:
0.17729
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
